Migrate to Atlas